--- a/cvapp/src/App.css
+++ b/cvapp/src/App.css
@@ -1,6 +1,8 @@
 .App {
-  background-color: lightgrey;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    border-bottom: 2px solid black;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid black;
+  text-align: center;
+  font-size: 12px;
+  background-color: #e8e8e4;
 }
