--- a/cvapp/src/sections/body/sidebar/Sidebar.css
+++ b/cvapp/src/sections/body/sidebar/Sidebar.css
@@ -1,9 +1,13 @@
-.Sidebar-wrapper{
+.Sidebar-wrapper {
     border: 1px solid black;
-    padding: 10px;
-    margin: 10px;
+    padding: 5px;
+    margin: 5px;
 }
 
-.Sidebar-title{
+.Sidebar-title {
     font-size: large;
 }
+
+/* .Sidebar-content{
+    border: 1px solid black;
+} */
