--- a/cvapp/src/sections/body/Body.css
+++ b/cvapp/src/sections/body/Body.css
@@ -18,6 +18,10 @@
     border: 5px solid white;
 }
 
+.FaceIconClass {
+    font-size: 8.5rem !important;
+}
+
 .photo {
     background-color: rgb(96, 96, 153);
     width: 150px;
@@ -26,7 +30,7 @@
     padding: 30px;
     margin: 10% 10px 10px 10px;
     text-align: center;
-    background-image: url(./logo.png);
+    /* background-image: url(./logo.png); */
 }
 
 .photo-wrapper {
@@ -47,8 +51,8 @@
 }
 
 .content-wrapper {
-    padding: 10px;
-    margin: 10px;
+    padding: 15px;
+    margin: 15px;
 }
 
 .name-title {
@@ -57,8 +61,9 @@
     font-size: 25px;
 }
 
-.summary-title {
-    font-weight: bold;
+.name-subtitle {
+    font-size: 18px;
+    color: darkgray;
 }
 
 .separator {
@@ -73,20 +78,4 @@
     border-bottom: 1px solid black;
     width: 15%;
     padding-top: 10px;
-    margin-bottom: 10px;
-}
-
-.name-subtitle {
-    font-size: 18px;
-    color: darkgray;
-}
-
-.work-experience-wrapper {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    font-weight: bold;
-    padding-top: 10px;
-    padding-bottom: 10px;
 }
