--- a/cvapp/src/sections/body/Body.css
+++ b/cvapp/src/sections/body/Body.css
@@ -1,9 +1,18 @@
 .Body {
     background-color: #e2ece9;
     min-height: 300px;
+}
+
+.Body-wrapper {
+    background-color: #e2ece9;
+    min-height: 300px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+}
+
+.Body-name-form {
+    padding: 20px;
 }
 
 .Body-section-left {
@@ -56,6 +65,7 @@
 }
 
 .name-title {
+    /* text-transform: uppercase; */
     text-align: center;
     font-weight: bold;
     font-size: 25px;
@@ -78,4 +88,8 @@
     border-bottom: 1px solid black;
     width: 15%;
     padding-top: 10px;
+}
+
+.form-row {
+    margin-bottom: 10px;
 }
