--- a/cvapp/src/App.css
+++ b/cvapp/src/App.css
@@ -2,7 +2,7 @@
   padding-top: 5px;
   padding-bottom: 5px;
   border-bottom: 1px solid black;
-  text-align: center;
+  /* text-align: center; */
   font-size: 12px;
   background-color: #e8e8e4;
 }
